auth: Add JWT to SIWE token exchange
